--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.14.0",
         "sweetalert2": "^9.17.1",
+        "vue-input-autocomplete": "^1.0.0",
         "vue-loading-overlay": "^3.3.3",
         "vue-router": "^3.4.3",
         "vuelidate": "^0.7.5",
